css/main.css
/* ... */
.ztree li{
    line-height:inherit;
}
.ztree li a {
    height: 32px;
    color: black !important;
    padding: 0px;
}
.ztree li a:hover {
    color: black;
}

.ztree li a.curSelectedNode {
    position: relative;
    height: 32px;
    background-color: inherit;
    font-weight: bold;
    border: none;
}
.ztree li a.curSelectedNode:before{
    content: "";
    position: absolute;
    width: 4px;
    background-color: #dd6600;
    top: 4px;
    left: -8px;
    height: 24px;
}

.ztree li a.curSelectedNode_Edit {
    height: 32px;
    background-color:inherit;
    border: none;
    color: black;
}
.ztree li a.tmpTargetNode_inner {  
    height: 32px;
    padding-right: 6px;
    background-color:#aaaaac46;
    border:none;
}


.ztree li a input.rename {
    height:26px;
    font-size: inherit;
    width:inherit;
    border:1px rgb(49, 49, 49) solid; *border:0px
}
.ztree li span {
    vertical-align: middle !important;
    line-height:32px;
}


/*tree icons*/
.ztree li span.button {
    width:20px; 
    height:20px;
    margin-left: 2px;
    background-size: contain;
    background-image: none;
    background-attachment: inherit;
}

.ztree li a.level0 span.button.ico_open, .ztree li a.level0 span.button.ico_close, .ztree li span.button.ico_open, .ztree li span.button.ico_close, .ztree li span.button.ico_docu {
    margin-right: 3px;
}

.ztree li a.level0 span.button.ico_open {
    background-position: inherit;
    background-image:url("../img/icons/home-opened.svg"); *background-image:url("../img/icons/home-opened.svg");
}
.ztree li a.level0 span.button.ico_close {
    background-position: inherit;
    background-image:url("../img/icons/home-closed.svg"); *background-image:url("../img/icons/home-closed.svg");
}
.ztree li span.button.ico_open {
    background-position: inherit;
    background-image:url("../img/icons/folder-open-colored.svg"); *background-image:url("../img/icons/folder-open-colored.svg");
}
.ztree li span.button.ico_close {
    background-position: inherit;
    background-image:url("../img/icons/folder-colored.svg"); *background-image:url("../img/icons/folder-colored.svg");
}
.ztree li span.button.ico_docu {
    background-position: inherit;
    background-image:url("../img/icons/file.svg"); *background-image:url("../img/icons/file.svg");
}

.ztree li span.button.add {
    margin-right:2px;
    margin-left: 12px;
    background-image:url("../img/icons/plus-bold.svg"); *background-image:url("../img/icons/plus-bold.svg");
}
.ztree li span.button.edit {
    background-position: inherit;
    background-image:url("../img/icons/edit.svg"); *background-image:url("../img/icons/edit.svg");
}
.ztree li span.button.remove {
    background-position: inherit;
    background-image:url("../img/icons/trash.svg"); *background-image:url("../img/icons/trash.svg");
}

/*dragging*/
span.tmpzTreeMove_arrow { 
    width:20px; 
    height:20px;
    background-attachment: inherit;
    background-size: contain;
    background-position: inherit;
    background-image:url("../img/icons/arrow-right.svg"); *background-image:url("../img/icons/arrow-right.svg")
}
ul.ztree.zTreeDragUL { 
    background-color: #ffd9bc;
    color: black;
    border: 2px black dotted;
    padding-left: 6px;
    padding-right: 8px;
}
ul.tmpTargetzTree {
    background-color: inherit;
}


/*---------------------------------------------------------*/
/*-------------------------splitter------------------------*/
/*---------------------------------------------------------*/

#splitter {
    cursor: col-resize;
    border-left: 1px solid;
    border-color: #b0b0b0;
    position: absolute;
    width: 12px;
    top: 0px;
    bottom: 0px;
    margin: 20px 0px;
    display: block;
}

#splitter.ab-closed {
    border-style: none;
    cursor: auto;
    width: 22px;
}

#splitter.thin {
    width: 0px;
    padding: 0px;
    margin: 0px 0px;
}

/*#ztree:not(.ab-dragging), #splitter:not(.ab-dragging), #document:not(.ab-dragging),*/ #toggleButton {
    /* temporarly disabled. it adds horizontal scroll, when it's on the right size of page.*/
    /*transition: all 0.3s ease 0.0s;*/
}

#toggleButton {
    cursor: pointer;
    position: relative;
    top: 45px;
    border: solid;
    border-width: 1px;
    border-color: inherit;
    width: 20px;
    height: 40px;
    background-color: #ffffff;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    z-index: 1000;
}

#toggleButton.ab-opened {
    background-image: url(/img/icons/chevron-left.svg);
    border-right-color: #ffffff;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-left: -20px;
}

#toggleButton.ab-closed {
    background-image: url(/img/icons/chevron-right.svg);
    border-left-color: #ffffff;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    margin-left: -1px;
}


/*---------------------------------------------------------*/
/*-------------------------document------------------------*/
/*---------------------------------------------------------*/

#document {
    border-style: none;
    position: absolute;
    display: flex;
    flex-direction: column;
    left: 25%;
    width: 75%;
    top: 0px;
    bottom: 0px;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 30px 20px 20px 20px;
}

#selectedDoc {
    margin-bottom: 2rem;
}

#abDoc{
    flex-grow: 1;
}

/*==================*/
/*  inside editor   */
/*==================*/
#editor {
    font-family: 'PT Serif', Georgia, serif;    
    font-size: 1.23rem !important;
    padding: 0rem !important;
    color: #000000;
    min-height: 100px;
    -ms-word-break: break-all;
    word-break: break-all;
    word-break: break-word;
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    hyphens: auto;
}

#editor .ql-editor {
    padding: 0px;
    overflow-y: inherit;
}

#editor .ql-editor.ql-blank::before {
    left: 0px;
}

#editor.ql-container.ql-bubble:not(.ql-disabled) a{
    white-space: pre-wrap;
   }
/* ... */

